# GameDepot

./: .gitignore  README.md  go.mod
cmd/gamedepot/: main.go  main_test.go  parse_compat.go
gui/: README.md  run_gui.bat  run_gui.ps1  run_gui.py
gui/gamedepot_gui/: api.py  daemon.py  main.py
installer/: GameDepot.iss  GameDepotInstaller.iss  README_BUILD.md  build-gamedepot-saver.ps1  build-installer.ps1
internal/app/: app.go
internal/blob/: hash.go  layout.go  layout_test.go
internal/commands/: asset_status.go  changes.go  checkout.go  classify.go  clone.go  clone_init_test.go  config.go  conflicts.go  daemon.go  doctor.go  gc.go  gc_impact.go  git_config.go  history.go  init.go  integration_test.go  list.go  lock.go  project.go  remote_ops.go  remote_setup.go  repair.go  restore.go  restore_version.go  rules_config.go  status.go  store.go  submit.go  sync.go  update_publish.go  verify.go
internal/config/: config.go  defaults.go  global.go  load.go
internal/gc/: gc.go  gc_test.go
internal/git/: commit.go  files.go  git.go  history.go  remote.go
internal/historyindex/: historyindex.go
internal/localindex/: localindex.go
internal/locks/: locks.go  locks_test.go
internal/manifest/: diff.go  diff_test.go  load.go  manifest.go  save.go
internal/refs/: refs.go
internal/restoreops/: restoreops.go
internal/rules/: rules.go  rules_test.go
oss_manager_pyqt/: README.md  pyproject.toml
oss_manager_pyqt/oss_manager/: __main__.py  app.py  config.py  git_backend.py  models.py  oss_backends.py  qt_compat.py  ref_parser.py  workers.py
(+47 files in other folders)
